refactor: extract common logic into reusable methods in `HttpClientConfigurationTest`
- Consolidated router setup logic and API retrieval into `setupRouter` and `getApi1` methods.
- Improved test readability and reduced code duplication.
- Added `@NotNull` annotation for better null-safety assurance.